examples/test/testpolicy3221.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3221
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key18: value37
      key37: value10
      key41: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value7
          key7: value20
          key42: value46
      podSelector:
        matchLabels:
          key42: value28
